--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1"
   },
-  "homepage": "https://ealucas.github.io/fcc-markdown-editor/",
+  "homepage": "https://ealucas.github.io/FCC-Markdown-Previewer/",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
